--- a/scala-test-feature/pom.xml
+++ b/scala-test-feature/pom.xml
@@ -31,7 +31,7 @@
     <dependencies>
         <dependency>
             <groupId>com.edc4it</groupId>
-            <artifactId>scala-test_2.11</artifactId>
+            <artifactId>scala-test</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         
