--- a/scala-test-feature/pom.xml
+++ b/scala-test-feature/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <!--
 
@@ -28,37 +29,37 @@
     <name>scala-test-feature feature</name>
     <description>Create a feature with the defined dependencies set.</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.edc4it</groupId>
-            <artifactId>scala-test</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-            
-        </dependency>
-        
-    </dependencies>
+        <dependencies>
+            <dependency>
+                <groupId>com.edc4it</groupId>
+                <artifactId>scala-test</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
 
-    <build>
-                 <plugins>
-                     <plugin>
-                         <groupId>org.apache.karaf.tooling</groupId>
-                         <artifactId>features-maven-plugin</artifactId>
-                         <version>2.4.0</version>
-                         <executions>
-                             <execution>
-                                 <id>generate-features-file</id>
-                                 <phase>generate-resources</phase>
-                                 <goals>
-                                     <goal>generate-features-file</goal>
-                                 </goals>
-                                 <configuration>
-                                     <karafVersion>2.4.0</karafVersion>
-                                 </configuration>
-                             </execution>
-                         </executions>
-                     </plugin>
-                 </plugins>
-             </build>
+            </dependency>
+
+        </dependencies>
+
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.karaf.tooling</groupId>
+                    <artifactId>features-maven-plugin</artifactId>
+                    <version>2.4.0</version>
+                    <executions>
+                        <execution>
+                            <id>generate-features-file</id>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>generate-features-file</goal>
+                            </goals>
+                            <configuration>
+                                <karafVersion>2.4.0</karafVersion>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
 
 
 </project>
